# hera-ai-ai

./: .gitignore  README.md  environment.yml
backend/: .env.example  pyproject.toml
backend/app/: admin.py  config.py  db.py  main.py  run.py
backend/app/graph/: build.py  edges.py  nodes.py  state.py
backend/app/services/: _frames.py  _gemini_retry.py  coherence.py  critic.py  embeddings.py  hera_api.py  hera_dashboard.py  hera_session.py  jina.py  planner.py  render_cache.py  stitch.py  strategist.py  templates.py
backend/migrations/versions/: 0001_templates.sql  0002_app_secrets.sql  0003_hera_usage.sql  0004_render_cache.sql  0005_template_content_hash.sql
backend/tests/: test_edges.py  test_hera_session.py  test_render_cache_helpers.py  test_templates_helpers.py
backend/tests/integration/: conftest.py  test_duration_filter.py  test_hera_api_live.py  test_render_cache_db.py  test_run_endpoint.py  test_stitch_e2e.py  test_templates_db.py  test_v1_loop_a.py  test_v1_loop_b.py
frontend/: .env.example  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: AgentTimeline.tsx  CurlPasteModal.tsx  HeraSessionPanel.tsx  Layout.tsx  QuotaInterruptDialog.tsx  ShotCard.tsx  TemplatesPanel.tsx
frontend/src/hooks/: useEventStream.ts  useFetchedResource.ts
frontend/src/lib/: api.ts  relativeTime.ts
frontend/src/pages/: RunPage.tsx  SettingsPage.tsx
frontend/src/types/: agent.ts
